# django_curd

./: db.sqlite3  pyproject.toml
snack_crud_project/: settings.py  urls.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html
